tests/fixtures/invalid/sum_no_args.py
# sum() requires at least 1 argument
x = sum()
